--- a/Views/Login/LoginSuccess.cshtml
+++ b/Views/Login/LoginSuccess.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<h4>Welcome!</h4>
 
 <div class="text-center">
     <h1 class="display-4">Welcome To Our Weather Application</h1>
@@ -12,13 +10,4 @@
             </div>
         </form>
     </div>
-    <div class="card-body">
-        <h4 class="card-title">Login or Register</h4>
-        <form asp-action="Login" asp-controller="Login">
-            <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-
 </div>
